Refactor in labels

--- a/example/app/sections/color.html
+++ b/example/app/sections/color.html
@@ -1,7 +1,7 @@
 <section id="color" data-transition="slide">
     <header data-title="Colors">
         <nav class="box">
-            <a href="#back" data-router="section" data-label="back"></a>
+            <a href="#back" data-router="section" data-label="Back"></a>
         </nav>
     </header>
     <article class="active scroll indented">
