--- a/example/app/sections/layout.html
+++ b/example/app/sections/layout.html
@@ -1,7 +1,7 @@
 <section id="layout" data-transition="slide">
     <header data-title="Layout" class="extended">
         <nav class="box">
-            <a href="#back" data-router="section" data-label="back"></a>
+            <a href="#back" data-router="section" data-label="Back"></a>
         </nav>
         <nav class="right">
             <a href="#splash" data-router="section" data-async="app/sections/splash.html" class="button" data-icon="user" data-label="Splash"></a>
