--- a/example/app/sections/touchevents.html
+++ b/example/app/sections/touchevents.html
@@ -1,13 +1,13 @@
 <section id="touchevents" data-transition="slide">
     <header data-title="Test Gestures">
         <nav class="box">
-            <a href="#back" data-router="section" data-label="back"></a>
+            <a href="#back" data-router="section" data-label="Back"></a>
         </nav>
     </header>
 
     <article id="example" class="active">
         <div class="seven rows" id="gestures"></div>
-        <div class="two rows scroll console" id="console" ></div>
+        <div class="two rows scroll console output" id="console" ></div>
         <div class="one row console"><a href="#" class="button anchor" data-action="clean_console">Clean Console</a></div>
 
     </article>
