--- a/example/app/sections/carousel.html
+++ b/example/app/sections/carousel.html
@@ -1,7 +1,7 @@
 <section id="carousel" data-transition="slide">
     <header>
         <nav class="box">
-            <a href="#back" data-router="section" data-label="back"></a>
+            <a href="#back" data-router="section" data-label="Back"></a>
         </nav>
 
         <div class="centered title">Photo Nº<span>1</span></div>
