--- a/example/app/sections/data-attribute.html
+++ b/example/app/sections/data-attribute.html
@@ -1,7 +1,7 @@
 <section id="data" data-transition="slide">
     <header data-title="Data Attributes">
         <nav class="box">
-            <a href="#back" data-router="section" data-label="back"></a>
+            <a href="#back" data-router="section" data-label="Back"></a>
         </nav>
     </header>
 
