--- a/example/app/sections/form.html
+++ b/example/app/sections/form.html
@@ -1,7 +1,7 @@
 <section id="form" data-transition="slide">
     <header data-title="Form Elements">
         <nav class="box">
-            <a href="#back" data-router="section" data-label="back"></a>
+            <a href="#back" data-router="section" data-label="Back"></a>
         </nav>
         <nav class="right">
             <a href="#" class="button" data-icon="share" data-label="Share"></a>
