--- a/example/app/sections/themeroller.html
+++ b/example/app/sections/themeroller.html
@@ -1,7 +1,7 @@
 <section id="themeroller" data-transition="slide">
     <header data-title="Theme roller">
         <nav class="box">
-            <a href="#back" data-router="section" data-label="back"></a>
+            <a href="#back" data-router="section" data-label="Back"></a>
         </nav>
     </header>
 
