--- a/example/app/asides/features.html
+++ b/example/app/asides/features.html
@@ -1,6 +1,6 @@
 <aside id="features" class="left">
     <header data-title="Features">
-        <nav class="right box">
+        <nav class="right">
             <a href="#" class="buttons" data-icon="settings"></a>
         </nav>
     </header>
@@ -79,12 +79,14 @@
             </li>
 
             <!-- Layout Events -->
+            <!--
             <li>
                 <a href="#layoutevents" data-router="section" data-async="app/sections/layoutevents.html">
                     <div class="tag right">2</div>
                     <strong>Layout Events</strong>
                 </a>
             </li>
+            -->
 
             <!-- Notifications -->
             <li>
@@ -126,18 +128,18 @@
                 </a>
             </li>
 
-            <!-- Grid System -->
-            <li>
-                <a href="#grid" data-router="section" data-async="app/sections/grid.html">
-                    <strong>Grid System</strong>
-                </a>
-            </li>
-
             <!-- Theme roller -->
             <li>
                 <a href="#themeroller" data-router="section" data-async="app/sections/themeroller.html">
                     <div class="tag right">4</div>
                     <strong>Theme roller</strong>
+                </a>
+            </li>
+
+            <!-- Grid System -->
+            <li>
+                <a href="#grid" data-router="section" data-async="app/sections/grid.html">
+                    <strong>Grid System</strong>
                 </a>
             </li>
         </ul>
