--- a/example/app/sections/carousel.html
+++ b/example/app/sections/carousel.html
@@ -1,14 +1,13 @@
 <section id="carousel" data-transition="slide">
     <header>
-        <nav class="box">
-            <a href="#back" data-router="section" data-label="Back"></a>
+        <nav>
+            <a href="#back" data-router="section" data-icon="home"></a>
         </nav>
-
         <div class="centered title">Photo Nº<span>1</span></div>
 
-        <nav class="right box">
-            <a href="#" data-action="carousel" data-direction="left" data-icon="left"></a>
-            <a href="#" data-action="carousel" data-direction="right" data-icon="right"></a>
+        <nav class="right">
+            <a href="#" data-action="carousel" data-direction="left" data-icon="left" class="button"></a>
+            <a href="#" data-action="carousel" data-direction="right" data-icon="right" class="button"></a>
         </nav>
     </header>
     <article id="carousel-article" class="active block" data-control="carousel">
