--- a/example/app/sections/data-attribute.html
+++ b/example/app/sections/data-attribute.html
@@ -1,7 +1,7 @@
 <section id="data" data-transition="slide">
     <header data-title="Data Attributes">
-        <nav class="box">
-            <a href="#back" data-router="section" data-label="Back"></a>
+        <nav>
+            <a href="#back" data-router="section" data-icon="home"></a>
         </nav>
     </header>
 
@@ -12,7 +12,7 @@
                 <small>Creates an icon Lungo vectorized</small>
             </li>
 
-            <li data-image="http://lungo.tapquo.com/resources/icon-144.png">
+            <li data-image="http://cdn.tapquo.com/lungo/icon-144.png">
                 <strong>data-image</strong>
                 <small>Instance a &lt;img&gt; automatically</small>
             </li>
