--- a/example/app/sections/form.html
+++ b/example/app/sections/form.html
@@ -1,10 +1,10 @@
 <section id="form" data-transition="slide">
     <header data-title="Form Elements">
-        <nav class="box">
-            <a href="#back" data-router="section" data-label="Back"></a>
+        <nav>
+            <a href="#back" data-router="section" data-icon="home"></a>
         </nav>
         <nav class="right">
-            <a href="#" class="button" data-icon="share" data-label="Share"></a>
+            <a href="#form-extras" data-router="article" class="button" data-label="Extras"></a>
         </nav>
     </header>
 
@@ -31,7 +31,6 @@
                 <textarea></textarea>
             </fieldset>
 
-            <a href="#form-extras" data-router="article" class="button anchor accept" data-label="View Extra Elements"></a>
         </div>
     </article>
 
