--- a/example/app/sections/splash.html
+++ b/example/app/sections/splash.html
@@ -1,11 +1,11 @@
 <section id="splash" data-transition="slide">
     <article class="active indented splash">
-        <img src="http://lungo.tapquo.com/resources/logo_splash.png"/>
-        <form class="rounded">
+        <img src="http://cdn.tapquo.com/lungo/logo.png"/>
+        <form class="roundeds">
             <input type="text" placeholder="Your username" id="txt-signup-name" value="">
             <input type="password" placeholder="Your password" id="txt-signup-password" value="">
-            <a href="#" class="button theme anchor" data-icon="checkmark" data-icon="user">Login</a>
-            <a href="#back" data-router="section" class="button accept anchor" data-icon="left">Return to Kichensink</a>
+            <a href="#" class="button theme anchor large" data-icon="lock" data-icon="user">Login</a>
+            <a href="#back" data-router="section" class="button secondary anchor" data-icon="home">Return to Kichensink</a>
         </form>
     </article>
 </section>
