--- a/example/app/sections/aside.html
+++ b/example/app/sections/aside.html
@@ -1,7 +1,7 @@
 <section id="aside" data-transition="slide">
     <header data-title="Asides">
-        <nav class="box">
-            <a href="#back" data-router="section" data-label="Back"></a>
+        <nav>
+            <a href="#back" data-router="section" data-icon="home"></a>
         </nav>
     </header>
     <article id="aside-example" class="active indented">
