--- a/example/app/sections/icon.html
+++ b/example/app/sections/icon.html
@@ -1,7 +1,7 @@
 <section id="icon" data-transition="slide">
     <header class="extended" data-title="Icons Repository">
-        <nav class="box">
-            <a href="#back" data-router="section" data-label="Back"></a>
+        <nav>
+            <a href="#back" data-router="section" data-icon="home"></a>
         </nav>
     </header>
 
