--- a/example/app/sections/layout.html
+++ b/example/app/sections/layout.html
@@ -1,10 +1,10 @@
 <section id="layout" data-transition="slide">
     <header data-title="Layout" class="extended">
-        <nav class="box">
-            <a href="#back" data-router="section" data-label="Back"></a>
+        <nav>
+            <a href="#back" data-router="section" data-icon="home"></a>
         </nav>
         <nav class="right">
-            <a href="#splash" data-router="section" data-async="app/sections/splash.html" class="button" data-icon="user" data-label="Splash"></a>
+            <a href="#splash" data-router="section" data-async="app/sections/splash.html" data-icon="lock" class="button"></a>
         </nav>
     </header>
 
