--- a/example/app/sections/list.html
+++ b/example/app/sections/list.html
@@ -1,7 +1,7 @@
 <section id="list" data-transition="slide">
     <header data-title="Lists" class="extended">
-        <nav class="box">
-            <a href="#back" data-router="section" data-label="Back"></a>
+        <nav>
+            <a href="#back" data-router="section" data-icon="home"></a>
         </nav>
     </header>
 
@@ -105,11 +105,11 @@
             </li>
 
             <li class="anchor">With data-icon or data-image attribute</li>
-            <li data-image="http://lungo.tapquo.com/resources/icon-144.png">
+            <li data-image="http://cdn.tapquo.com/lungo/icon-144.png">
                 <strong>&lt;li data-image&gt; + &lt;strong&gt; </strong>
                 <small>&lt;small&gt;</small>
             </li>
-            <li class=" thumb" data-image="http://lungo.tapquo.com/resources/icon-144.png">
+            <li class=" thumb" data-image="http://cdn.tapquo.com/lungo/icon-144.png">
                 <strong>&lt;li .thumb data-image&gt; + &lt;strong&gt; </strong>
                 <small>&lt;small&gt;</small>
             </li>
@@ -233,11 +233,11 @@
 
 
             <li class="anchor">With data-icon or data-image attribute</li>
-            <li data-image="http://lungo.tapquo.com/resources/icon-144.png">
+            <li data-image="http://cdn.tapquo.com/lungo/icon-144.png">
                 <strong>&lt;li data-image&gt; + &lt;strong&gt; </strong>
                 <small>&lt;small&gt;</small>
             </li>
-            <li class=" thumb" data-image="http://lungo.tapquo.com/resources/icon-144.png">
+            <li class=" thumb" data-image="http://cdn.tapquo.com/lungo/icon-144.png">
                 <strong>&lt;li .thumb data-image&gt; + &lt;strong&gt; </strong>
                 <small>&lt;small&gt;</small>
             </li>
