--- a/example/app/sections/pull.html
+++ b/example/app/sections/pull.html
@@ -1,7 +1,7 @@
 <section id="pull" data-pull="normal" data-transition="slide">
     <header data-title="Pull & Refresh">
-        <nav class="box">
-            <a href="#back" data-router="section" data-label="Back"></a>
+        <nav>
+            <a href="#back" data-router="section" data-icon="home"></a>
         </nav>
     </header>
 
