data-control=menu (BETA)

--- a/example/app/asides/features.html
+++ b/example/app/asides/features.html
@@ -46,6 +46,14 @@
                 </a>
             </li>
 
+            <!-- Menu -->
+            <li>
+                <a href="#menu" data-router="section" data-async="app/sections/menu.html">
+                    <div class="tag right">1</div>
+                    <strong>Menu</strong>
+                </a>
+            </li>
+
             <!-- Data-Attributes -->
             <li>
                 <a href="#data" data-router="section" data-async="app/sections/data-attribute.html">
