--- a/example/flexbox.html
+++ b/example/flexbox.html
@@ -58,11 +58,10 @@
                 <a href="#layout-art4" data-router="article" data-icon="settings"></a>
             </nav>
         </footer>
-
     </section>
 
 
-    <section id='second' data-transition="slide" class="" data-aside="features"  class="hide">
+    <section id='second' data-transition="slide" data-aside="features" -data-child="third">
         <header data-title='second' data-back="home">
             <nav class="right">
                 <a href="#features2" data-action="aside" data-router="aside" data-icon="menu"></a>
@@ -73,8 +72,7 @@
     </section>
 
 
-    <!--
-    <section id='second' class="show" data-transition="slide" data-aside="features2" data-child="">
+    <section id='third' data-transition="slide" data-aside="features">
         <header data-title='second' data-back="home">
             <nav class="right">
                 <a href="#features2" data-action="aside" data-router="aside" data-icon="menu"></a>
@@ -83,7 +81,7 @@
 
         <article id='a' class='active'></article>
     </section>
-    -->
+
 
 
     <aside id="features" >
@@ -113,6 +111,9 @@
                 </li>
                 <li>
                     <a href="#second" data-router="section"><strong>Section 2</strong></a>
+                </li>
+                <li>
+                    <a href="#third" data-router="section"><strong>Section 3</strong></a>
                 </li>
             </ul>
         </article>
