Port sources to CoffeeScript

--- a/example/index.html
+++ b/example/index.html
@@ -57,7 +57,7 @@
 </head>
 
 <body class="app">
-    <section id="main" data-transition="">
+    <section id="main" data-transition="" data-aside="features">
         <header>
             <nav class="left">
                 <a href="#features" data-router="aside" data-icon="menu"></a>
