Refactor list view

--- a/example/app/sections/list.html
+++ b/example/app/sections/list.html
@@ -1,14 +1,14 @@
 <section id="list" data-transition="slide">
     <header data-title="Lists" class="extended">
         <nav>
-            <a href="#back" data-router="section" data-icon="home"></a>
+            <a href="#" data-view-section="back" data-icon="home"></a>
         </nav>
     </header>
 
     <nav class="groupbar">
-        <a href="#list-normal" data-router="article" class="active" data-icon="checkmark" data-label="Normal"></a>
-        <a href="#list-indented" data-router="article" data-label="Indented"></a>
-        <a href="#list-examples" data-router="article" data-label="Examples"></a>
+        <a href="#" data-view-article="list-normal" class="active" data-icon="checkmark" data-label="Normal"></a>
+        <a href="#" data-view-article="list-indented" data-label="Indented"></a>
+        <a href="#" data-view-article="list-examples" data-label="Examples"></a>
     </nav>
 
     <article id="list-normal" class="active list scroll">
