Show aside if return to a section

--- a/example/flexbox.html
+++ b/example/flexbox.html
@@ -125,7 +125,7 @@
     </section>
 
 
-    <section id='folk' data-transition="cover" data-aside="features">
+    <section id='folk' data-transition="slide" data-aside="features">
         <header data-title='Javi Jimenez'>
             <nav>
                 <a href="#" data-view-section="back" data-label="Back" class="button"></a>
@@ -214,6 +214,12 @@
                 <li data-view-article="products" data-title="Products" data-icon="mobile">
                     <div class="tag right">5</div>
                     <strong>Products</strong>
+                    <small>Fueled by coffee</small>
+                </li>
+
+                <li data-view-section="folk" data-view-article="f1" data-icon="mobile">
+                    <div class="tag right">5</div>
+                    <strong>Folk F1</strong>
                     <small>Fueled by coffee</small>
                 </li>
             </ul>
