You can select if want history (reload) or not

--- a/example/flexbox.html
+++ b/example/flexbox.html
@@ -252,7 +252,9 @@
     <script>
         Lungo.init({
             name: 'Flexbox',
-            version: '2.2'//,
+            version: '2.2',
+            history: true
+            //,
             // resources: ['app/sections/list.html']
         });
     </script>
