Markup in examples

--- a/example/app/asides/features.html
+++ b/example/app/asides/features.html
@@ -8,18 +8,14 @@
     <article class="list scroll active">
         <ul>
             <!-- Basic Layout -->
-            <li class="active">
-                <a href="#main-article" data-router="article" data-title="Lungo Framework">
-                    <strong>Meet the framework</strong>
-                </a>
+            <li class="active" data-view-article="main-article" data-title="Lungo Framework">
+                <strong>Meet the framework</strong>
             </li>
 
             <!-- Layout & Navigation -->
-            <li>
-                <a href="#layout" data-router="section" data-async="app/sections/layout.html">
-                    <strong>Layout</strong>
-                    <div class="tag right">5</div>
-                </a>
+            <li data-view-section="layout" data-async="app/sections/layout.html">
+                <strong>Layout</strong>
+                <div class="tag right">5</div>
             </li>
 
             <!-- List -->
