--- a/example/app/sections/splash.html
+++ b/example/app/sections/splash.html
@@ -5,7 +5,7 @@
             <input type="text" placeholder="Your username" id="txt-signup-name" value="">
             <input type="password" placeholder="Your password" id="txt-signup-password" value="">
             <a href="#" class="button theme anchor large" data-icon="lock" data-icon="user">Login</a>
-            <a href="#back" data-router="section" class="button secondary anchor" data-icon="home">Return to Kichensink</a>
+            <a href="#" data-view-section="back" class="button secondary anchor" data-icon="home">Return to Kichensink</a>
         </form>
     </article>
 </section>
