--- a/example/index.html
+++ b/example/index.html
@@ -60,7 +60,7 @@
     <section id="main" data-transition="" data-aside="features">
         <header>
             <nav class="left">
-                <a href="#features" data-router="aside" data-icon="menu"></a>
+                <a href="#" data-view-aside="features" data-icon="menu"></a>
             </nav>
             <img src="http://cdn.tapquo.com/lungo/logo.png" class="title centered">
             <nav class="right">
@@ -68,7 +68,7 @@
             </nav>
         </header>
 
-        <article id="main-article" class="active list indented scroll">
+        <article id="main-article" class="list indented scroll">
             <ul>
                 <li class="dark">
                     <strong>
