--- a/example/flexbox.html
+++ b/example/flexbox.html
@@ -29,18 +29,28 @@
         <header>
             <nav>
                 <a href="#" data-view-aside="features" data-icon="menu"></a>
+                <a href="#" class="button" data-labeñ-l="folk" data-icon="user" data-view-article="folks"></a>
+
             </nav>
-            <!--
+
             <img src="http://cdn.tapquo.com/lungo/logo.png" class="title centered">
-            -->
-            <div class="title centered">laskdkals</div>
+
+            <!-- <div class="title centered">laskdkals</div> -->
             <!-- <img src="http://cdn.tapquo.com/lungo/logo.png" class="title centered"> -->
 
             <nav class="right">
+                <!--
                 <a href="#" data-article="folks" data-label="folks"></a>
                 <a href="#" data-icon="user" class="button"></a>
-                <a href="#" data-view-article="products" data-label="Products" data-count="5"></a>
+            -->
+                <a href="#" data-icon="user" class="button" data-label="sksk"></a>
+                <a href="#" data-icon="user" class="button" data-label="sksk"></a>
+                <a href="#" data-icon="user" class="button" data-view-article="products"></a>
 
+                <!--
+                <button data-icon="user"></button>
+                <a href="#" data-view-article="products" data-label="Products" data-count="5"></a>
+                    -->
             </nav>
         </header>
 
@@ -49,9 +59,9 @@
             <a href="#" data-view-article="products" data-label="Products" data-count="5"></a>
         </nav>
 
-        <article id="folks" class="list scroll">
+        <article id="folks" class="list scroll indente-d">
             <ul>
-                <li class="thumb selectable" data-view-section="folk" data-image="http://cdn.tapquo.com/photos/javi.jpg">
+                <li class="thumb selectable arrow" data-view-section="folk" data-image="http://cdn.tapquo.com/photos/javi.jpg">
                     <a href="#" >
                         <strong>Javi Jiménez</strong>
                         <small>Founder & CTO</small>
@@ -100,6 +110,7 @@
             </ul>
         </article>
 
+        <!--
         <article id="products" class="list scroll">
             <ul>
                 <li class="selectable" data-image="http://cdn.tapquo.com/lungo/icon-144.png">
@@ -122,6 +133,7 @@
                 </li>
             </ul>
         </article>
+        -->
 
         <footer>
             <nav>
@@ -214,11 +226,21 @@
             <ul>
                 <!-- Basic Layout -->
                 <li data-view-article="folks" data-title="Profile" data-icon="users">
-                    <div class="tag right">11</div>
-                    <strong>Folks</strong>
-                    <small>Discover our team!</small>
+                    <a href="#">
+                        <div class="tag right">11</div>
+                        <strong>Folks</strong>
+                        <small>Discover our team!</small>
+                    </a>
                 </li>
+                <!--
                 <li data-view-article="products" data-title="Products" data-icon="mobile">
+                    <div class="tag right">5</div>
+                    <strong>Products</strong>
+                    <small>Fueled by coffee</small>
+                </li>
+                -->
+
+                <li data-view-article="products" data-title="Third Parties" data-async="app/articles/products.html">
                     <div class="tag right">5</div>
                     <strong>Products</strong>
                     <small>Fueled by coffee</small>
