--- a/example/flexbox.html
+++ b/example/flexbox.html
@@ -13,12 +13,12 @@
     <meta http-equiv="cleartype" content="on">
 
     <!-- Main Stylesheet -->
-    <link rel="stylesheet" href="components/lungo/lungo.css">
-    <link rel="stylesheet" href="components/lungo/lungo.icon.css">
-    <link rel="stylesheet" href="components/lungo/lungo.icon.brand.css">
-    <link rel="stylesheet" href="components/lungo/lungo.css">
+    <link rel="stylesheet" href="components/lungo.brownie/lungo.css">
+    <link rel="stylesheet" href="components/lungo.brownie/lungo.icon.css">
+    <link rel="stylesheet" href="components/lungo.brownie/lungo.icon.brand.css">
+    <link rel="stylesheet" href="components/lungo.brownie/lungo.css">
 
-    <link rel="stylesheet" href="components/lungo/theme.lungo.css" id="theme-stylesheet">
+    <link rel="stylesheet" href="components/lungo.brownie/theme.lungo.css" id="theme-stylesheet">
 
     <!-- App Stylesheet -->
     <link rel="stylesheet" href="stylesheets/app.css">
@@ -27,9 +27,12 @@
 <body class="app">
     <section id="main" data-transition="" data-aside="features" data-children="folk ">
         <header>
-            <nav>
+            <nav class="left">
                 <a href="#" data-view-aside="features" data-icon="menu"></a>
-                <a href="#" class="button" data-labeñ-l="folk" data-icon="user" data-view-article="folks"></a>
+                <a href="#" data-icon="user" class="button" data-article="products" data-label="Folks" data-view-article="folks"></a>
+                <a href="#" class="button" data-article="products" data-label="Folks" data-view-article="folks"></a>
+                <a href="#" data-icon="user" class="button" data-article="products" data-view-article="folks"></a>
+
 
             </nav>
 
@@ -39,14 +42,7 @@
             <!-- <img src="http://cdn.tapquo.com/lungo/logo.png" class="title centered"> -->
 
             <nav class="right">
-                <!--
-                <a href="#" data-article="folks" data-label="folks"></a>
-                <a href="#" data-icon="user" class="button"></a>
-            -->
-                <a href="#" data-icon="user" class="button" data-label="sksk"></a>
-                <a href="#" data-icon="user" class="button" data-label="sksk"></a>
-                <a href="#" data-icon="user" class="button" data-view-article="products"></a>
-
+                <button data-icon="user" class="button" data-article="folks" data-label="Products" data-view-article="products" data-async="app/articles/products.html"></button>
                 <!--
                 <button data-icon="user"></button>
                 <a href="#" data-view-article="products" data-label="Products" data-count="5"></a>
@@ -56,7 +52,7 @@
 
         <nav class="groupbar" data-article="folks">
             <a href="#" data-view-article="folks" data-label="Folks" data-count="11"></a>
-            <a href="#" data-view-article="products" data-label="Products" data-count="5"></a>
+            <a href="#" data-view-article="products" data-async="app/articles/products.html" data-label="Products" data-count="5"></a>
         </nav>
 
         <article id="folks" class="list scroll indente-d">
@@ -232,13 +228,6 @@
                         <small>Discover our team!</small>
                     </a>
                 </li>
-                <!--
-                <li data-view-article="products" data-title="Products" data-icon="mobile">
-                    <div class="tag right">5</div>
-                    <strong>Products</strong>
-                    <small>Fueled by coffee</small>
-                </li>
-                -->
 
                 <li data-view-article="products" data-title="Third Parties" data-async="app/articles/products.html">
                     <div class="tag right">5</div>
@@ -253,8 +242,6 @@
                 </li>
             </ul>
         </article>
-
-        <footer>ASIDE/FOOTER</footer>
     </aside>
 
     <aside id="features2" class="right">
@@ -269,13 +256,11 @@
                 </li>
             </ul>
         </article>
-
-        <footer>ASIDE/FOOTER</footer>
     </aside>
 
     <!-- Lungo dependencies -->
     <script src="components/quojs/quo.js"></script>
-    <script src="components/lungo/lungo.js"></script>
+    <script src="components/lungo.brownie/lungo.js"></script>
 
     <!-- LungoJS - Sandbox App -->
     <script>
